--- a/themes/CustomJuice/style.css
+++ b/themes/CustomJuice/style.css
@@ -1,6 +1,13 @@
 body { text-align: center; }
-#wrapper { display: block; border: 1px #a2a2a2 solid; width:90%; margin:0px auto; }
-#header { border: 2px #a2a2a2 solid; }
+#wrapper { display: block; border: 1px #a2a2a2 solid; width:100%; margin:0px auto; }
+#header
+{
+	background-color: powderblue;
+	font:  normal 100% Arial, Helvetica, sans-serif;
+	letter-spacing: 0.1em;
+	margin: 0;
+	padding: 5px 5px 5px 5px;
+}
 #content { width: 75%; border: 2px #a2a2a2 solid; float: left; }
 #sidebar { width: 23%; border: 2px #a2a2a2 solid; float: right; }
 #delimiter { clear: both; }
@@ -45,4 +52,30 @@ body { text-align: center; }
   color: inherit;
   text-decoration: none;
   transform: skew(25deg);
+}
+
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+
+a:hover {
+    color: red;
+    text-decoration: none;
+}
+
+a:visited {
+   color: blue;
+}
+
+.header_title
+{
+  background-color: yellow;
+}
+
+.description
+{
+  font-size: 20;
+  color: red;
+  background-color: lightgreen;
 }
